tests/checker/good/constraint_scope.scilla
scilla_version 0

import BoolUtils

library Constraint

type MyTyp =
| Val1 of Bool
| Val2 of Uint128

let lib_val =
  let t = True in
  Val1 t

contract Constraint(param_val : Bool)
with
  match lib_val with
  | Val1 v => andb v param_val
  | Val2 _ => False
  end
=>
