tests/checker/bad/forward_definition_procedure.scilla
scilla_version 0

library MyLib

contract ForwardDefinitionProcedure ()

field tmp : Int32 = Int32 0

procedure Proc1(arg : Int32)
  new_arg = True;
  (* Proc2 not in scope *)
  Proc2 new_arg
end

procedure Proc2 (arg : Bool)
  match arg with
  | True =>
    a = Int32 1;
    tmp := a
  | False =>
    a = Int32 42;
    tmp := a
  end
end